--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>github-my-second-project</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>github-my-second-project</name>
-	<description>Demo1 project for Spring Boot</description>
+	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
 		<license/>
