--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
-		</dependency>
+	<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+    	<artifactId>spring-boot-starter-data-jpa</artifactId>
+    	<version>3.5.3</version>
+    </dependency>	</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
